<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/bottom_navigation_height">
    <!-- 搜索框和消息提醒（暂无功能）-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_menu_bar_height"
        android:orientation="horizontal"
        android:background="@color/top_menu_background">
        <LinearLayout
            android:id="@+id/search_icon_bar"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:background="@drawable/search_border_view"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="3dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/search"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\t搜索感兴趣的内容"
                android:textColor="@color/qmui_config_color_gray_8"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/home_message"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src = "@mipmap/message"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlPrimaryColor="@color/light_gray"
        app:srlAccentColor="@color/colorPrimary">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true">

                <!-- banner -->
                <com.bigkoo.convenientbanner.ConvenientBanner
                    android:id="@+id/convenientBanner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:canLoop="true"
                    app:autoTurningTime="2000"
                    />
                <!-- 四栏图标，拟定是：发布任务、领取任务、审核任务、本周热门 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:background="#fff"
                    android:paddingBottom="15dp">
                    <LinearLayout
                        android:id="@+id/home_category_single"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/category_icon_size"
                            android:layout_height="@dimen/category_icon_size"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/single_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/single_icon_text"
                            android:textSize="@dimen/category_text_size"
                            android:paddingTop="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_category_multi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/category_icon_size"
                            android:layout_height="@dimen/category_icon_size"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/multi_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/multi_icon_text"
                            android:paddingTop="5dp"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/home_category_qa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/category_icon_size"
                            android:layout_height="@dimen/category_icon_size"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/qa_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/qa_icon_text"
                            android:paddingTop="5dp"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/home_category_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="@dimen/category_icon_size"
                            android:layout_height="@dimen/category_icon_size"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/label_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/label_icon_text"
                            android:paddingTop="5dp"
                            android:textSize="@dimen/category_text_size"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- 今日推荐 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#ffffff">
                    <ImageView
                        android:id="@+id/today_recommend_img"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:src="@mipmap/today_recommend"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_recommend_text"
                        android:textSize="16sp"
                        android:textColor="@color/qmui_config_color_75_pure_black"
                        android:layout_toRightOf="@id/today_recommend_img"
                        android:paddingLeft="5dp"/>

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/today_recommend_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <!-- 任务列表 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#ffffff">
                    <ImageView
                        android:id="@+id/all_tasks_img"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginLeft="15dp"
                        android:src="@mipmap/all_tasks_icon"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_tasks_note"
                        android:textSize="16sp"
                        android:textColor="@color/qmui_config_color_75_pure_black"
                        android:layout_toRightOf="@id/all_tasks_img"
                        android:paddingLeft="5dp"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/all_tasks_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>

        </ScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>